--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "source-map-loader": "^5.0.0"
   },
   "proxy": "http://localhost:8081"
 }
