--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
